Updated acquire_timer2()'s state machine to work when the i8254 is being used for timecounting.  Fixed a race or two in it.  Undisabled it.

PR:		10455